2006-03-13  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* NEWS, configure.in:
	Version 0.1.5.

2006-03-13  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* tests/test_thwbrk.c: Allocate more buffer for th_brk_line() output,
	fixing bogus bug that blocks the test.

2006-03-13  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* tests/test_thwbrk.c: Print out the strings in problem when the
	result from th_brk_line() and th_wbrk_line() do not match.

2006-03-13  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* tests/test_thcell.c: Fix bug in test_th_prev_cell() due to wrong
	variable referencing.

2006-02-18  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* src/tkbrk/Makefile.am: Remove map.c from cttex sources, to fix
	compiling bug caused by building map.o with and without libtool.

2006-02-18  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* configure.in, src/Makefile.am: Add -version-info into LDFLAGS. 
	We start maintaining library version info from now on.

2005-10-28  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* COPYING:  Update FSF address.

2005-10-09  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* configure.in:
	Formatted configure options help strings with AC_HELP_STRING().
	Used --disable/--enable help style rather than --enable with default
	yes or no.

2005-03-15  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* src/thrend/thrend.c:
	Add Mac PUAs for baseless Tho Than and Yo Ying, as well as lowered
	version of lower marks.

	* tests/test_thrend.c:
	Update tester accodingly.

2005-03-02  Pattara Kiatisevi <ott@linux.thai.net>

	* src/thbrk/:
	Debug information (default commented out)
	Some new words added to tdict.txt

2005-01-13  Pattara Kiatisevi <ott@linux.thai.net>
	
	* src/thbrk/thbrk.c:
	A space is considered and returned as a breakable point

2004-10-16  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* NEWS, configure.in:
	Version 0.1.4.

2004-10-13  Theppitak Karoonboonyanan <thep@linux.thai.net>
