@@ -1,4 +1,4 @@
-# $Id: configure.in,v 1.24 2006-03-13 16:21:32 thep Exp $
+# $Id: configure.in,v 1.25 2006-05-04 10:14:26 thep Exp $
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.50)
@@ -25,6 +25,19 @@ AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
 AM_PROG_LIBTOOL
+
+AC_MSG_CHECKING([for Win32])
+case "$host" in
+  *-*-mingw*|*-*-cygwin*)
+    native_win32=yes
+    AC_DEFINE(LIBTHAI_WIN32, 1, [Define when compiling on Windows])
+    ;;
+  *)
+    native_win32=no
+    ;;
+esac
+AC_MSG_RESULT([$native_win32])
+AM_CONDITIONAL(OS_WIN32, test "$native_win32" = "yes")
 
 dnl Check commandline options
 AC_ARG_ENABLE(debug,
