@@ -1,3 +1,8 @@
+2006-05-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* configure.in, src/Makefile.am: Add check and condition for Win32
+	build with cygwin/mingw.
+
 2006-03-13  Theppitak Karoonboonyanan <thep@linux.thai.net>
 
 	* NEWS, configure.in:
@@ -820,13 +825,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.79 2006-03-13 16:21:32 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.80 2006-05-04 10:14:26 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.79 2006-03-13 16:21:32 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.80 2006-05-04 10:14:26 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
